# rust-tour

./: .dockerignore  .gitignore  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  DIRECTORY_BROWSER_FEATURE.md  Dockerfile  Dockerfile.base-alpine  Dockerfile.dev  Dockerfile.prod  Dockerfile.simple  LICENSE  PRD_CLI_Tool.md  PRD_Exercise_Framework.md  README.md  RENAME_SUMMARY.md  docker-compose.dev.yml  docker-compose.ghcr.yml  docker-compose.yml  package-lock.json  package.json  test_browser.sh
.claude/agents/: rust-learning-architect.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  exercise_suggestion.md
.github/workflows/: base-image.yml  ci-cd.yml  ci.yml  cleanup.yml  create-release.yml  docker-publish.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/plan/: ADR-001-Remove-Exercise-Framework.md  CI-CD-Workflow.md  DISCUSSION_SUMMARY.md  Docker-Guide.md  FUTURE_FEATURES.md  MIGRATION_CHECKLIST.md  PRD_Core_Platform.md  PRD_Progress_System.md  PRD_Web_UI.md  TECHNICAL_DOCUMENTATION.md
docs/wiki/: Contributing-Guide.md  Exercise-Guide.md  FAQ-Troubleshooting.md  Home.md  Installation-Setup.md
exercise-framework/: Cargo.toml
exercise-framework/src/: exercise.rs  hints.rs  lib.rs  metadata.rs  progress.rs  testing.rs  validation.rs
exercises/ch01_getting_started/ex01_hello_world/: Cargo.toml  README.md  metadata.json
exercises/ch01_getting_started/ex02_hello_cargo/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch01_getting_started/ex03_compilation/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch01_getting_started/ex04_comments/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch01_getting_started/ex05_rust_edition/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch01_getting_started/ex06_first_program/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch02_guessing_game/ex01_user_input/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch02_guessing_game/ex02_random_numbers/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch02_guessing_game/ex03_string_parsing/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch02_guessing_game/ex04_match_expressions/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch02_guessing_game/ex05_loops/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch02_guessing_game/ex06_error_handling/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch02_guessing_game/ex07_complete_game/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch02_guessing_game/ex08_game_enhancements/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch03_common_concepts/ex01_variables/: Cargo.toml  README.md  hints.md  metadata.json  solution_test
exercises/ch03_common_concepts/ex02_mutability/: Cargo.toml  README.md  hints.md  metadata.json  solution
exercises/ch03_common_concepts/ex03_shadowing/: Cargo.toml  README.md  hints.md  metadata.json  solution
exercises/ch03_common_concepts/ex04_data_types/: Cargo.toml  README.md  hints.md  metadata.json  solution
exercises/ch03_common_concepts/ex05_booleans_chars/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch03_common_concepts/ex06_compound_types/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch03_common_concepts/ex07_functions/: Cargo.toml  README.md  hints.md  metadata.json  solution
exercises/ch03_common_concepts/ex08_comments/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch03_common_concepts/ex09_advanced_functions/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch03_common_concepts/ex10_if_else/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch03_common_concepts/ex11_loops/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch03_common_concepts/ex12_control_flow_practice/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch04_understanding_ownership/: README.md
exercises/ch04_understanding_ownership/ex01_ownership_basics/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch04_understanding_ownership/ex02_move_semantics/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch04_understanding_ownership/ex03_references_borrowing/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch04_understanding_ownership/ex04_mutable_references/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch04_understanding_ownership/ex05_borrowing_rules/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch04_understanding_ownership/ex06_slices_intro/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch05_using_structs/: README.md
exercises/ch05_using_structs/ex01_struct_definition/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch05_using_structs/ex02_struct_update_syntax/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch05_using_structs/ex03_struct_methods/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch05_using_structs/ex04_associated_functions/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch05_using_structs/ex05_tuple_structs/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch05_using_structs/ex06_ownership_structs/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch05_using_structs/ex07_rectangle_program/: Cargo.toml  README.md  hints.md  metadata.json
exercises/ch05_using_structs/ex08_student_manager/: Cargo.toml  README.md  hints.md  metadata.json
scripts/: build-docker.sh  check-book-references.sh  run-release.sh  run.sh  setup-codespace.sh  setup.sh  start-platform.sh  start-production.sh  start-web.sh  test-all-exercises.sh  test-docker.sh  test-exercises.sh  validate-exercises.sh  validate-metadata.sh  welcome.sh
web/: .eslintrc.cjs  package-lock.json  package.json  server.js  vite.config.js
web-server/: Cargo.toml  build.rs
web-server/src/: main.rs
web/scripts/: cleanup-monaco.js
web/src/: index.html  main.js  styles.css
web/src/js/: book-integration.js  terminal.js  (+4 more)
(+131 files in other folders)
