[workspace]
members = [
    "exercise-framework",
    "web-server",
    "exercises/ch*/ex[0-9][0-9]*"
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Ghanithan Subramani", "Rust Tour Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ghanithan/rust-tour"
homepage = "https://github.com/ghanithan/rust-tour"

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

# Exercise framework dependencies  
criterion = "0.5"
tempfile = "3.8"
walkdir = "2.4"

# Web server dependencies
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip", "limit"] }
hyper = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
portable-pty = "0.8"
notify = "6.0"
rust-embed = "8.0"
mime_guess = "2.0"
path-absolutize = "3.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Common dependencies
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"