[package]
name = "rust-learn-cli"
version = "0.1.0"
edition = "2021"
authors = ["Rust Learning Platform Contributors"]
description = "CLI tool for the Rust Learning Platform"

[[bin]]
name = "rust-learn-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["full"] }
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
exercise-framework = { path = "../exercise-framework" }