[package]
name = "exercise-framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Exercise framework for Rust Tour"
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
tempfile.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# For test execution
tokio = { workspace = true, optional = true }

[features]
default = ["async"]
async = ["tokio"]

[dev-dependencies]
criterion.workspace = true

# Benchmarks disabled for now
# [[bench]]
# name = "exercise_loading"
# harness = false