[package]
name = "rust-tour"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Interactive web-based Rust tutorial with exercises, progress tracking, and integrated terminal"
keywords = ["rust", "learning", "education", "tutorial", "programming"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
readme = "../README.md"
include = [
    "src/**/*",
    "build.rs",
    "web-dist/**/*",
    "monaco-editor/**/*"
]

[[bin]]
name = "rust-tour"
path = "src/main.rs"

[features]
default = []
embed-assets = ["rust-embed"]

[dependencies]
# Web framework and middleware
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip", "limit"] }
hyper = { version = "1.0", features = ["full"] }

# WebSocket support
tokio-tungstenite = "0.20"
futures-util = "0.3"

# Terminal/PTY support
portable-pty = "0.8"

# File watching
notify = "6.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Static asset embedding (optional, only for publishing)
rust-embed = { version = "8.0", optional = true }
mime_guess = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Path handling
path-absolutize = "3.1"

# UUID for session IDs
uuid = { version = "1.0", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Directory walking
walkdir = "2.4"

# HTTP client for fetching book content
reqwest = { version = "0.11", features = ["json"] }

# HTML parsing for book content extraction
scraper = "0.15"
regex = "1.0"